--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 50px 0px;
+    margin: 50px 0px;
     z-index: 0;
 
     position: fixed;
@@ -12,6 +12,7 @@
 
     .footer__social {
         transition: all 0.5s ease;
+        position: relative;
     }
 
     &__actions {
