--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 0px;
+    margin: 50px 0px;
 
     position: fixed;
     top: 0;
